update gallery for tablets and desktop, fix styles, dark mode, add index.ts files

--- a/src/components/AboutSection/AboutSection.scss
+++ b/src/components/AboutSection/AboutSection.scss
@@ -14,6 +14,10 @@
       line-height: 1.3;
 
       color: variable.$primary;
+
+      html.dark & {
+        color: variable.$icons;
+      }
     }
 
     &--text {
